<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Books Island</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_ads">My Ads</string>
    <string name="chats">Chats</string>
    <string name="wishlist">WishList</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="profile_floating_action_button">profile floating action button</string>
    <string name="onboarding_text_1">Used And New Books With Great Prices</string>
    <string name="onboarding_text_2">More Than 20 Books Categories In One Place</string>
    <string name="onboarding_text_3">Sell, Donate, Exchange &amp; Bid Your Books With Us</string>
    <string name="next">Next</string>
    <string name="onboarding_image">onBoardingImage</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="loading">loading..</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="tree_leaf">TreeLeaf</string>
    <string name="tree_paper">TreePaper</string>
    <string name="todo">TODO</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="chooseDistrict">Choose District</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="choose_governorate">Choose Governorate</string>
    <string name="back_image">back image</string>
    <string name="username">Username</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="no_internet_connection">Check your Internet connection and try again.</string>
    <string name="send_mail_to_reset_password">Mail send successfully to reset your password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="logged_out_successfully">Logged Out Successfully</string>
    <string name="sort_by">Sort By</string>
    <string name="buy">Buy</string>
    <string name="search_by_book_name_or_author">Search by book name or author</string>
    <string name="filter_image">filter image</string>
    <string name="favourite_image">favourite image</string>
    <string name="book_image">book image</string>
    <string name="_120_egp">120 EGP</string>
    <string name="book_description">Rich Dad Poor Dad is a 1997 book written by Robert T. Kiyosaki and Sharon Lechter. It was an incredible experience of how knowing the real business men</string>
    <string name="book_title">Qudrant Flow of Money</string>
    <string name="user_location">Maadi, Cairo</string>
    <string name="adv_publish_date">11 NOV</string>
    <string name="filter_error">Enter at least one filter</string>
    <string name="filter_image_button">filter image button</string>
    <string name="add_adv_floating_button">add adv floating button</string>
    <string name="page_title">Sell</string>
    <string name="mandatory_star">*</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="price">Price</string>
    <string name="choose">Choose</string>
    <string-array name="condition">
        <item>New</item>
        <item>Used With Good Condition</item>
        <item>Used With Bad Condition</item>
    </string-array>
    <string name="edition">Edition</string>
    <string name="post_duration">Post Duration [ Days ]</string>
    <string name="cancel_uploaded_image">cancel uploaded image</string>
    <string name="uploaded_image">uploaded image</string>
    <string name="upload_image">Upload Image</string>
    <string name="at_least_one_image">At Least One Image ( Max 5 images )</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="submit_post">Submit Post</string>
    <string name="choose_category">Choose Category</string>
    <string name="book_category_image">book category image</string>
    <string name="self_development">Self Development</string>
    <string name="ForgetPassword">ForgetPassword</string>
    <string name="no_internet">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="photo">photo</string>
    <string name="forgetyourpassword">Forget Your Password?</string>
    <string name="send_message">send_message</string>
    <string name="hello_heba">Hello Heba,</string>
    <string name="welcome_username">Hello %1$s,</string>
    <string name="donations">Donations</string>
    <string name="exchange">Exchange</string>
    <string name="auctions">Auctions</string>
    <string name="logout">Logout</string>
    <string name="heba_adel">Heba Adel</string>
    <string name="cairo">Cairo</string>
    <string name="october">october</string>
    <string name="update">Update</string>
    <string name="Title">النموذج الرباعي للتدفقات النقدية</string>
    <string name="Price">120 EGP</string>
    <string name="maadi_cairo">Maadi, Cairo</string>
    <string name="_11_11_2022">11/11/2022</string>
    <string name="about_the_book">About The Book</string>
    <string name="paragraph">Rich Dad Poor Dad is a 1997 book written by Robert T. Kiyosaki and Sharon Lechter. It advocates the importance of financial literacy, financial independence and building wealth through investing in assets, real estate investing, starting and owning businesses, as well as increasing one\'s financial intelligence</string>
    <string name="author_name">Robert T. Kiyosaki and Sharon Lechter</string>
    <string name="used">Used</string>
    <string name="safety">Your Safety Comes First !</string>
    <string name="instructions1">Never go alone to meet a buyer / seller, always take someone with you.</string>
    <string name="instructions2">Only meet in public / crowded places for example metro stations and malls.</string>
    <string name="instructions3">Check and inspect the product properly before purchasing it.</string>
    <string name="details">Details</string>
    <string name="instructions4">Never pay anything in advance or transfer money before inspecting the product.</string>
    <string name="condition_">Condition :</string>
    <string name="author_">Author :</string>
    <string name="hazem_khaled">Hazem Khaled</string>
    <string name="related_ads">Related Ads</string>
    <string name="no_related_ads_yet">No Related Ads Yet!</string>
    <string name="investment">Investment</string>
    <string name="category_">Category :</string>
    <string name="free">FREE</string>
    <string name="egypt_pound">%1$s EGP</string>
    <string name="titles">Title</string>
    <string name="one_for_one">One For One</string>
    <string name="donate">Donate</string>
    <string name="app_icon">app icon</string>
    <string name="share_menu">Share</string>
    <string name="rate_menu">Rate</string>
    <string name="review_menu">Review</string>
    <string name="our_apps_menu">Our Apps</string>
    <string name="about_menu">About</string>
    <string name="auction">Auction</string>
    <string name="start_price">Start Price</string>
    <string name="started">STARTED</string>
    <string name="bidders_2">Bidders: 2</string>
    <string name="bidders_number">Bidders: %1$s</string>
    <string name="current_price_120_egp">Current Price: 120 EGP</string>
    <string name="current_price_egypt_pound">Current Price: %1$s EGP</string>
    <string name="edition_">Edition :</string>
    <string name="_2">2</string>
    <string name="exchange_for">Exchange For</string>
    <string name="your_book_images_at_least_1_image">Your Book Images(At Least 1 image)</string>
    <string name="upload_book">Upload A Book</string>
    <string name="add_book">Add Book</string>
    <string name="by">By %1$s</string>
    <string name="book_to_exchange_for_at_least_1_book">Books To Exchange For (At Least 1 Book)</string>
    <string name="_1">1</string>
    <string name="edition_details">Edition:</string>
    <string name="start_price_details">Start Price:</string>
    <string name="_100_egp">100 EGP</string>
    <string name="last_bidder_you">Last Bidder: You</string>
    <string name="participate">Participate</string>
    <string name="current_price">Current Price:</string>
    <string name="no_one">No One</string>
    <string name="your_bid">Your Bid</string>
    <string name="bid">Bid</string>
    <string name="last_bidder">Last Bidder</string>
    <string name="other">Other</string>
    <string name="status_started">Status: Started</string>
    <string name="status_value">Status: %1$s</string>
    <string name="last_bidder_value">Last Bidder:</string>
    <string name="add_bid_successfully">Your Bid Added Successfully</string>
    <string name="profile_updated_successfully">Updated Successfully</string>
    <string name="password_tool_tip_image">password tool tip image</string>
    <string name="tooltip_password">- Password must be more than 5 characters in length. \n - Password must be alphanumeric with a minimum of 1 letters, 1 digits and special character. \n- Password is Case Sensitive</string>
    <string name="tooltip_username">- Username is Cas Sensitive.\n- Maximum username length is 22.</string>
    <string name="tooltip_email">"- Email is Case Sensitive. "</string>
    <string name="update_post">Update Post</string>
    <string name="delete_ad_icon">delete ad icon</string>
    <string name="by_robert_kiyosaki">by Robert Kiyosaki</string>
    <string name="message_send_successfully">Message Send Successfully</string>
    <string name="message_cannot_be_empty">Not a valid message</string>
    <string name="write_a_message">ًWrite a message</string>
    <string name="send_image">send image</string>
    <string name="upload_images_image">upload images image</string>
    <string name="chat_text_example">Hi, How are you?</string>
    <string name="sender_image">sender image</string>
    <string name="habiba_tarek">Habiba Tarek</string>
    <string name="please_provide_me_with_extra_details_about_this_book">please provide me with extra details about this book</string>
    <string name="_16_32">16:32</string>
    <string name="buying">Buying</string>
    <string name="selling">selling</string>
    <string name="filter">Filter</string>
    <string name="district">District</string>
    <string name="newing">New</string>
    <string name="apply">Apply</string>
    <string name="governorate">Governorate</string>
    <string name="near_by_me">Near By Me</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="added_recently">Added Recently</string>
    <string name="sort_by2">Sort By</string>
    <string name="cancel">Cancel</string>
    <string name="others">Others</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="reported_to">To :</string>
    <string name="category_report">Category :</string>
    <string name="_12_june_2023">12 June 2023</string>
    <string name="reporter">Reporter :</string>
    <string name="seif_mohammed">Seif Mohammed</string>
    <string name="this_user_is_threatening_me">This user is threatening me</string>
    <string name="hash">#</string>
    <string name="instructions">Instructions</string>
    <string name="report">Report</string>
    <string name="comment">Comment :</string>
    <string name="this_user_is_threatening_comment">This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.This user is threatening me.</string>
    <string name="accused_profile">Accused Profile</string>
</resources>