<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_admin_reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/gray_medium"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_report_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/hash"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/tv_report_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintBottom_toBottomOf="@id/tv_report_num"
                app:layout_constraintStart_toEndOf="@+id/tv_report_num"
                app:layout_constraintTop_toTopOf="@+id/tv_report_num"
                />
            <ImageView
                android:id="@+id/iv_cancel_report"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/ic_cancel"
                android:contentDescription="@string/cancel_request"
                android:text="@string/cancel_request"
                app:layout_constraintBottom_toBottomOf="@+id/tv_report_num"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_report_num" />
            <TextView
                android:id="@+id/tv_reporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/reporter"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/tv_report_num"
                app:layout_constraintTop_toBottomOf="@+id/tv_report_num"
                />
            <TextView
                android:id="@+id/tv_reported"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/seif_mohammed"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_reporter"
                app:layout_constraintStart_toEndOf="@+id/tv_reporter"
                app:layout_constraintTop_toTopOf="@+id/tv_reporter"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_reported_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/reported_to"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/tv_reporter"
                app:layout_constraintTop_toBottomOf="@+id/tv_reporter"
                />
            <TextView
                android:id="@+id/tv_reported_to_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/hazem_khaled"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_reported_to"
                app:layout_constraintStart_toEndOf="@+id/tv_reported_to"
                app:layout_constraintTop_toTopOf="@+id/tv_reported_to"
                />
            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_regular"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/category_report"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/tv_reported_to"
                app:layout_constraintTop_toBottomOf="@+id/tv_reported_to"
                />
            <TextView
                android:id="@+id/tv_category_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/this_user_is_threatening_me"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_category"
                app:layout_constraintStart_toEndOf="@+id/tv_category"
                app:layout_constraintTop_toTopOf="@+id/tv_category" />
            <TextView
                android:id="@+id/tv_report_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/roboto_bold"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/_12_june_2023"
                android:textColor="@color/gray_medium"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_category_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_category_type" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>